assets/css/style.css
body {
    font-family: "Roboto+Slab", sans-serif;
    letter-spacing: 3px;
}

/* INDEX/Main/Home */

/* Hero Image */

.hero-img {
    padding-top: 55px;
}

/* Meet the band */

.mtb-style {
    padding-top: 25px;
    text-align: center;

}

.mtb-style img {
    margin-top: 25px;
    margin-bottom: 25px;
}

.mtb-style h1 {
    padding-bottom: 25px;
}

.mtb-style h2 {
    padding-bottom: 15px;
    padding-top: 15px;
}

.mtb-style p {
    margin-top: 15px;
    margin-bottom: 30px;
}

.push-spaces {
    height: 700px;
}

/* youtube video */


.vid-style
{
    padding-top: 30px;
    padding-bottom: 30px;
    margin-bottom: 30px;
    border-top: 50px;
}

/* Modal & button styling */

.btn-style {
    padding: 0;
    letter-spacing: 3px;
}

.btn-style-2 {
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 0;
    padding-right: 0;
    border: 0;
}

.modal-style {
    border-left: 60px;
    border-right: 60px;
}

.box-style {
        margin-bottom: 20px;
}

/* Colours */
.footer-colour {
    background-color: #343a40;
}

nav a {
    color: #ffa52f;
    
}

div a {
    color: #14a78f;
}

footer p {
    color: #ffa52f;
}

footer p a {
        color: #14a78f;
}

.btn-colour {
    color: #14a78f;
}

.btn-colour:hover {
    color: #ffa52f;
}

nav a:hover{
    color: #14a78f;
}

div a:hover {
    color: #ffa52f;
}

footer p:hover {
    color: #14a78f;
}

footer p a:hover {
        color: #ffa52f;
}


/* Meet the band images */
.img-mtb {
    width: 170px;
    height: 170px;
    border-radius: 50%,;
}

/* footer */

footer p {
    margin-bottom: 0px;
    height: 50px;
}

footer p a {
    padding: 10px;
}

footer p {
    padding-top: 12px;
    padding-bottom: 10px;
}

/* Gallery */

.gal-title {
    padding-top: 100px;
    padding-bottom: 30px;
    text-align: center;
}
  
.gal-img {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
}

/* Tour Dates */

.tour-head-style {
    padding-top: 80px;
    padding-bottom: 40px;
    text-align: center;
    font-weight: 700;
    font-size: 32px;
    text-transform: capitalize;
    color: #ffa52f;
}

.tour-style {
    padding-top: 20px;
    padding-bottom: 40px;
    text-align: center;
    color: #14a78f;
}

